force-app/main/default/objects/FormField__c/FormField__c.object-meta.xml
<CustomObject>
    <label>Pergunta do Formulário</label>
    <nameField>
        <displayFormat>PF-{000000}</displayFormat>
        <label>Nome da Pergunta do Fromulário</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Perguntas do Formulário</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>