force-app/main/default/objects/FormField__c/fields/AnswerOptions__c.field-meta.xml
<CustomField>
    <fullName>AnswerOptions__c</fullName>
    <inlineHelpText>Os diferentes valores devem estar separado por ponto e vírgula</inlineHelpText>
    <label>Opções de Resposta</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>