force-app/main/default/objects/FormField__c/fields/ConditionObject__c.field-meta.xml
<CustomField>
    <fullName>ConditionObject__c</fullName>
    <label>Objecto da Condição</label>
    <type>TextArea</type>
</CustomField>