force-app/main/default/objects/FormField__c/fields/DynamicForm__c.field-meta.xml
<CustomField>
    <fullName>DynamicForm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Formulário Dinâmico</label>
    <referenceTo>DynamicForm__c</referenceTo>
    <relationshipLabel>Perguntas do Formulário</relationshipLabel>
    <relationshipName>Perguntas_do_Formul_rio</relationshipName>
    <type>Lookup</type>
</CustomField>