force-app/main/default/objects/FormField__c/fields/FieldToValue__c.field-meta.xml
<CustomField>
    <fullName>FieldToValue__c</fullName>
    <label>Campo para Valorizar</label>
    <type>TextArea</type>
</CustomField>