force-app/main/default/objects/FormField__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Objeto</label>
    <type>TextArea</type>
</CustomField>